--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons": "^5.2.4",
     "antd": "^5.8.1",
     "next": "latest",
+    "next-plugin-antd-less": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -18,6 +19,7 @@
     "@types/node": "^12.20.55",
     "@types/react": "^17.0.62",
     "@types/react-dom": "^17.0.20",
+    "babel-plugin-import": "^1.13.8",
     "typescript": "^4.9.5"
   }
 }
